internal/gatewayapi/testdata/securitypolicy-with-jwt-backendsettings.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-1
    namespace: default
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-1
    namespace: default
  spec:
    hostnames:
    - gateway.envoyproxy.io
    parentRefs:
    - name: gateway-1
      namespace: default
      sectionName: http
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
      matches:
      - path:
          value: /
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: default
        sectionName: http
infraIR:
  default/gateway-1:
    proxy:
      listeners:
      - name: default/gateway-1/http
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-1
          gateway.envoyproxy.io/owning-gateway-namespace: default
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: default/gateway-1
      namespace: envoy-gateway-system
securityPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    name: policy-for-route
    namespace: default
  spec:
    jwt:
      providers:
      - audiences:
        - foo.bar.com
        claimToHeaders:
        - claim: claim
          header: claim-header
        issuer: https://foo.bar.com
        name: foobar
        remoteJWKS:
          backendSettings:
            circuitBreaker:
              maxConnections: 2048
              maxParallelRequests: 4294967295
              maxParallelRetries: 1024
              maxPendingRequests: 1
              maxRequestsPerConnection: 1
            connection:
              bufferLimit: 100M
            dns:
              dnsRefreshRate: 30s
              lookupFamily: IPv4AndIPv6
            healthCheck:
              active:
                healthyThreshold: 1
                http:
                  expectedResponse:
                    binary: RXZlcnl0aGluZyBPSw==
                    type: Binary
                  expectedStatuses:
                  - 200
                  - 300
                  method: GET
                  path: /healthz
                interval: 3s
                timeout: 500ms
                type: HTTP
                unhealthyThreshold: 3
              passive:
                baseEjectionTime: 160s
                consecutive5XxErrors: 5
                consecutiveGatewayErrors: 0
                consecutiveLocalOriginFailures: 5
                interval: 2s
                maxEjectionPercent: 100
                splitExternalLocalOriginErrors: false
            loadBalancer:
              consistentHash:
                type: SourceIP
              type: ConsistentHash
            proxyProtocol:
              version: V2
            retry:
              numRetries: 3
              perRetry:
                backOff:
                  baseInterval: 1s
                  maxInterval: 5s
              retryOn:
                triggers:
                - 5xx
                - gateway-error
                - reset
            tcpKeepalive:
              idleTime: 20m
              interval: 60s
              probes: 3
            timeout:
              http:
                connectionIdleTimeout: 16s
                maxConnectionDuration: 17s
                requestTimeout: 5s
              tcp:
                connectTimeout: 15s
          failedRefetchDuration: 30s
          uri: https://foo.bar.com/jwt/public-key/jwks.json
    targetRef:
      group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httproute-1
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        namespace: default
        sectionName: http
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: spec.targetRef is deprecated, use spec.targetRefs instead
        reason: DeprecatedField
        status: "True"
        type: Warning
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
xdsIR:
  default/gateway-1:
    accessLog:
      json:
      - path: /dev/stdout
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-default-gateway-1-bfd08ef4
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: default/gateway-1
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-default-gateway-1-bfd08ef4
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: default/gateway-1
          protocol: TCP
    http:
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: gateway-1
        namespace: default
        sectionName: http
      name: default/gateway-1/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
      routes:
      - destination:
          metadata:
            kind: HTTPRoute
            name: httproute-1
            namespace: default
          name: httproute/default/httproute-1/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            metadata:
              kind: Service
              name: service-1
              namespace: default
              sectionName: "8080"
            name: httproute/default/httproute-1/rule/0/backend/0
            protocol: HTTP
            weight: 1
        hostname: gateway.envoyproxy.io
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-1
          namespace: default
        name: httproute/default/httproute-1/rule/0/match/0/gateway_envoyproxy_io
        pathMatch:
          distinct: false
          name: ""
          prefix: /
        security:
          jwt:
            providers:
            - audiences:
              - foo.bar.com
              claimToHeaders:
              - claim: claim
                header: claim-header
              issuer: https://foo.bar.com
              name: foobar
              remoteJWKS:
                failedRefetchDuration: 30s
                traffic:
                  backendConnection:
                    bufferLimit: 100000000
                  circuitBreaker:
                    maxConnections: 2048
                    maxParallelRequests: 4294967295
                    maxParallelRetries: 1024
                    maxPendingRequests: 1
                    maxRequestsPerConnection: 1
                  dns:
                    dnsRefreshRate: 30s
                    lookupFamily: IPv4AndIPv6
                  healthCheck:
                    active:
                      healthyThreshold: 1
                      http:
                        expectedResponse:
                          binary: RXZlcnl0aGluZyBPSw==
                        expectedStatuses:
                        - 200
                        - 300
                        host: ""
                        method: GET
                        path: /healthz
                      interval: 3s
                      timeout: 500ms
                      unhealthyThreshold: 3
                    passive:
                      baseEjectionTime: 2m40s
                      consecutive5XxErrors: 5
                      consecutiveGatewayErrors: 0
                      consecutiveLocalOriginFailures: 5
                      interval: 2s
                      maxEjectionPercent: 100
                      splitExternalLocalOriginErrors: false
                  loadBalancer:
                    consistentHash:
                      sourceIP: true
                  proxyProtocol:
                    version: V2
                  retry:
                    numRetries: 3
                    perRetry:
                      backOff:
                        baseInterval: 1s
                        maxInterval: 5s
                    retryOn:
                      triggers:
                      - 5xx
                      - gateway-error
                      - reset
                  tcpKeepalive:
                    idleTime: 1200
                    interval: 60
                    probes: 3
                  timeout:
                    http:
                      connectionIdleTimeout: 16s
                      maxConnectionDuration: 17s
                      requestTimeout: 5s
                    tcp:
                      connectTimeout: 15s
                uri: https://foo.bar.com/jwt/public-key/jwks.json
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
